Add header and nav bar

--- a/MyTimes/index.html
+++ b/MyTimes/index.html
@@ -7,7 +7,25 @@
   </head>
   <body>
     <header>
-      <img class="logo" src="./resources/images/myt-logo.jpg." />
+      <div class="logo">
+        <img src="./resources/images/myt-logo.jpg" />
+        <span>My Times</span>
+      </div>
+<!--Navigation Bar-->      
+      <nav>
+        <span>
+          <a href="#">World</a>
+        </span>
+        <span>
+          <a href="#">U.S.</a>
+        </span>
+        <span>
+          <a href="#">Tech</a>
+        </span>
+        <span>
+          <a href="#">Science</a>
+        </span>
+      </nav>
     </header>
   </body>
 </html>
