--- a/MyTimes/index.html
+++ b/MyTimes/index.html
@@ -33,7 +33,7 @@
   <div class="main">
     <!--First News Column-->
     <div class="column large">
-      <div class="leadstories">
+      <div class="lead-stories">
         <div class="story-main image-content">
           <span>Mother of Three Buys Tuna Steak at Phish Concert. Leaves, "Feeling Funny."</span>
         </div>
