--- a/MyTimes/index.html
+++ b/MyTimes/index.html
@@ -30,7 +30,7 @@
     </header>
 
 <!--Main Section-->
-  <div class="main">
+  <div class="content">
     <!--First News Column-->
     <div class="column large">
       <div class="lead-stories">
